[gd_scene load_steps=7 format=3 uid="uid://ddcvt4av8pk8a"]

[ext_resource type="PackedScene" uid="uid://40pvj01vaun1" path="res://Scenes/CombatScenes/combatScene.tscn" id="1_bfrwy"]
[ext_resource type="Script" path="res://Scripts/Combat/combat_scene_bat.gd" id="2_38kw8"]
[ext_resource type="AudioStream" uid="uid://ngacnw0ck2u7" path="res://Assets/Audio/explosion.wav" id="3_xbvn7"]
[ext_resource type="AudioStream" uid="uid://b2aw7girwpbhx" path="res://Assets/Audio/synth.wav" id="4_wsxq3"]

[sub_resource type="Curve2D" id="Curve2D_kdrnh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 127.142, 153, 0, 0, 0, 0, 1025.01, 151)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_lxwqv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 114, 335, 0, 0, 0, 0, 114, 604)
}
point_count = 2

[node name="Node2D" instance=ExtResource("1_bfrwy")]
script = ExtResource("2_38kw8")

[node name="Walls" parent="." index="4"]
metadata/_edit_use_anchors_ = true

[node name="UI" parent="." index="6"]
metadata/_edit_use_anchors_ = true

[node name="HPBar" parent="UI" index="2"]
metadata/_edit_use_anchors_ = true

[node name="BoulderPath" type="Path2D" parent="." index="7"]
position = Vector2(5.54772, 0)
scale = Vector2(0.994577, 1)
curve = SubResource("Curve2D_kdrnh")

[node name="BoulderSpawner" type="PathFollow2D" parent="BoulderPath" index="0"]
position = Vector2(127.142, 153)
rotation = -0.0022275

[node name="BoulderTimer" type="Timer" parent="." index="8"]
wait_time = 0.3

[node name="GasTimer" type="Timer" parent="." index="9"]
wait_time = 3.0

[node name="Path2D" type="Path2D" parent="." index="10"]
curve = SubResource("Curve2D_lxwqv")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]
position = Vector2(114, 335)
rotation = 1.5708

[node name="GasSpawn" type="Marker2D" parent="Path2D/PathFollow2D" index="0"]
position = Vector2(-2, -1)
rotation = -1.57428

[node name="LevelTimer" type="Timer" parent="." index="12"]
wait_time = 25.0

[node name="BoulderEffect" type="AudioStreamPlayer2D" parent="." index="15"]
stream = ExtResource("3_xbvn7")
volume_db = -26.243

[node name="GasEffect" type="AudioStreamPlayer2D" parent="." index="16"]
stream = ExtResource("4_wsxq3")
volume_db = 8.0

[connection signal="timeout" from="BoulderTimer" to="." method="_on_boulder_timer_timeout"]
[connection signal="timeout" from="GasTimer" to="." method="_on_gas_timer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
